# gemma-cookbook

./: .gitignore  main.py  pyproject.toml
Demos/PaliGemma-on-Android/Android_App/PaliGemma/gradle/wrapper/: gradle-wrapper.properties
Gemma/: [Gemma_3]RAG_with_EmbeddingGemma.ipynb
