[project]
name = "gemma-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "debugpy>=1.8.16",
    "zmq>=0.0.0",
    "pip>=25.2",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.56.0-Embedding-Gemma-preview" }
